--- a/index.html
+++ b/index.html
@@ -8,8 +8,93 @@
     <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
-<body>
+<body class="landing is-preload">
+    <div id="page-wrapper">
 
+        <!-- Header -->
+        <header id="header" class="alt">
+            <h1>
+                <a href="index.html">High Schoolar's Hub</a>
+            </h1>
+            <nav id="nav">
+                <ul>
+                    <li>
+                        <a href="index.html">BALLINA</a>
+                    </li>
+                    <li>
+                        <a href="#" class="icon solid fa-angle-down">MENU</a>
+                        <ul>
+                            <li>
+                                <a href="generic.html">Rregullat</a>
+                            </li>
+                            <li>
+                                <a href="contact.html">Kontakti</a>
+                            </li>
+                            <li>
+                                <a href="elements.html">Mësimdhënësit</a>
+                            </li>
+                            <li>
+                                <a href="#">Dhoma Diskutimi</a>
+                                <ul>
+                                    <li>
+                                        <a href="#">Gjuhë Shqipe</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Matematikë</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Shkenca Kompjuterike</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Art</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Gjuhë Angleze</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Fizikë</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Kimi</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Biologji</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Histori</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">TIK</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Gjeografi</a>
+                                    </li>
+
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#" class="button">REGJISTROHU</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+
+        <!-- Banner -->
+        <section id="banner">
+            <h2>High Scholar's Hub</h2>
+            <p>Platforma e vetme në vend për nxënësit e shkollave të mesme</p>
+            <ul class="actions special">
+                <li>
+                    <a href="#" class="button primary">Mësuesit</a>
+                </li>
+                <li>
+                    <a href="#" class="button">Nxënësit</a>
+                </li>
+            </ul>
+        </section>
+    </div>
 </body>
 
 </html>
