--- a/index.html
+++ b/index.html
@@ -95,6 +95,154 @@
             </ul>
         </section>
     </div>
+    <!-- Main -->
+    <section id="main" class="container">
+
+        <section class="box special">
+            <header class="major">
+                <h2>Të mësojmë së bashku
+                    <br /> Të gjithë në një vend</h2>
+                <p>Programi ynë do t'ju përgatisë për një të ardhme më të mirë dhe më të lehtë</p>
+
+            </header>
+            <span class="image featured">
+                <img src="images/Section1.jpg" alt="" />
+            </span>
+        </section>
+
+        <section class="box special features">
+            <div class="features-row">
+                <section>
+                    <span class="icon solid major fa-pen accent2"></span>
+                    <h3>Të mësojmë</h3>
+                    <p>Motivimi është sfida më e rëndësishme drejt suksesit në jetën akademike, dhe mund të bëhet tejet sfiduese veçanërisht
+                        kur keni shumë detyra, kurse, provime ose ese për të dorëzuar. Shpesh puna juaj mund të bëhet sfiduese, por këtu tek
+                        ne do të gjeni mbështjetjen e duhur, këshilla të nevojshme për t'ju motivuar për të studiuar, si dhe trajnime online
+                        për secilën fushë të studimit.</p>
+                </section>
+                <section>
+                    <span class="icon solid major fa-glasses accents"></span>
+                    <h3>Të sfidohemi </h3>
+                    <p> Të sfidojmë vetën për të arritur gjithmonë një nivel më të madh se ai që presim është i dobishëm jo vetëm për shëndetin
+                        tonë mendor, por edhe për mirëqenien tonë personale. Ndërsa pushtojmë sfida që qëndrojnë në rrugën tonë si bllokime
+                        në rrugë, duke refuzuar të dorëzohemi, ne gjejmë besim në aftësitë tona. Besimi është një karakteristikë kaq e rëndësishme
+                        për të gjetur rrugën drejt suksesit.</p>
+                </section>
+            </div>
+            <div class="features-row">
+                <section>
+                    <span class="icon solid major fa-gamepad accent4"></span>
+
+                    <h3>Të luajmë</h3>
+                    <p>Lojërat edukative janë një mjet i shkëlqyeshëm për ndërtimin e aftësive në matematikë, gjuhë, shkencë, studime shoqërore
+                        dhe shumë më tepër. Këto lojëra janë argëtuese, të mësojnë aftësi të rëndësishme në secilën fushë studimi të veçantë
+                        dhe ato janë falas. Ju jeni në vendin e duhur! Le të studiojmë dhe të argëtohemi së bashku.</p>
+                </section>
+                <section>
+                    <span class="icon solid major fa-male accent5"></span>
+                    <h3>Profili im</h3>
+                    <p>Personalizoni profilin tuaj në përputhje me nevojat dhe interesin tuaj! Bëni miq të rinj, ndihmoni të tjerët, kontribuoni
+                        në dhoma diskutimi ose krijoni faqen tuaj, merrni ndihmë nga të tjerët, zgjidhni aktivitetet dhe çfarë dëshironi të
+                        njoftoheni çdo ditë në profilin tuaj, dhe shumë më tepër.</p>
+                </section>
+            </div>
+        </section>
+
+        <div class="row">
+            <div class="col-6 col-12-narrower">
+
+                <section class="box special">
+                    <span class="image featured">
+                        <img src="images/pic02.jpg" alt="" />
+                    </span>
+                    <h3>Përgatitje për provim të maturës</h3>
+                    <p>Përgatitu për provim të maturës përmes platformës tonë që garanton 100% kalueshmëri në provim të maturës pas përfundimit
+                        me sukses të këtij kursi.</p>
+                    <ul class="actions special">
+                        <li>
+                            <a href="#" class="button alt">Mëso më shumë</a>
+                        </li>
+                    </ul>
+                </section>
+
+            </div>
+            <div class="col-6 col-12-narrower">
+
+                <section class="box special">
+                    <span class="image featured">
+                        <img src="images/pic03.jpg" alt="" />
+                    </span>
+                    <h3>Bursa për studime Bachelor</h3>
+                    <p>Zbulo dhe përzgjedh universitetet në të cilat dëshiron të studiosh. Apliko përmes nesh për të fituar bursë në universitetet
+                        tona partnere.</p>
+                    <ul class="actions special">
+                        <li>
+                            <a href="#" class="button alt">Mëso më shumë</a>
+                        </li>
+                    </ul>
+                </section>
+
+            </div>
+        </div>
+
+    </section>
+
+    <!-- CTA -->
+    <section id="cta">
+
+        <h2>Nxënësit e rinjë</h2>
+        <p>Ende nuk je pjesë e High Scholar's Hub? Regjistrohu dhe bashkohuni me mijëra nxënës të tjerë.</p>
+
+        <form>
+            <div class="row gtr-50 gtr-uniform">
+                <div class="col-8 col-12-mobilep">
+                    <input type="email" name="email" id="email" placeholder="E-mail Adresa juaj" />
+                </div>
+                <div class="col-4 col-12-mobilep">
+                    <input type="submit" value="Regjistrohu" class="fit" />
+                </div>
+            </div>
+        </form>
+
+    </section>
+
+    <!-- Footer -->
+    <footer id="footer">
+        <ul class="icons">
+            <li>
+                <a href="#" class="icon brands fa-twitter">
+                    <span class="label">Twitter</span>
+                </a>
+            </li>
+            <li>
+                <a href="#" class="icon brands fa-facebook-f">
+                    <span class="label">Facebook</span>
+                </a>
+            </li>
+            <li>
+                <a href="#" class="icon brands fa-instagram">
+                    <span class="label">Instagram</span>
+                </a>
+            </li>
+            <li>
+                <a href="#" class="icon brands fa-github">
+                    <span class="label">Github</span>
+                </a>
+            </li>
+            <li>
+                <a href="#" class="icon brands fa-dribbble">
+                    <span class="label">Dribbble</span>
+                </a>
+            </li>
+            <li>
+                <a href="#" class="icon brands fa-google-plus">
+                    <span class="label">Google+</span>
+                </a>
+            </li>
+        </ul>
+    </footer>
+
+</div>
 </body>
 
 </html>
