--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#" class="button">REGJISTROHU</a>
+                        <a href="regjistrohu.html" class="button">REGJISTROHU</a>
                     </li>
                 </ul>
             </nav>
@@ -87,10 +87,7 @@
             <p>Platforma e vetme në vend për nxënësit e shkollave të mesme</p>
             <ul class="actions special">
                 <li>
-                    <a href="#" class="button primary">Mësuesit</a>
-                </li>
-                <li>
-                    <a href="#" class="button">Nxënësit</a>
+                    <a href="#" class="button primary">Nxënësit</a>
                 </li>
             </ul>
         </section>
@@ -115,18 +112,18 @@
                 <section>
                     <span class="icon solid major fa-pen accent2"></span>
                     <h3>Të mësojmë</h3>
-                    <p>Motivimi është sfida më e rëndësishme drejt suksesit në jetën akademike, dhe mund të bëhet tejet sfiduese veçanërisht
-                        kur keni shumë detyra, kurse, provime ose ese për të dorëzuar. Shpesh puna juaj mund të bëhet sfiduese, por këtu tek
-                        ne do të gjeni mbështjetjen e duhur, këshilla të nevojshme për t'ju motivuar për të studiuar, si dhe trajnime online
-                        për secilën fushë të studimit.</p>
+                    <p>Motivimi është sfida më e rëndësishme drejt suksesit në jetën akademike, dhe mund të bëhet tejet sfiduese
+                        veçanërisht kur keni shumë detyra, kurse, provime ose ese për të dorëzuar. Shpesh puna juaj mund
+                        të bëhet sfiduese, por këtu tek ne do të gjeni mbështjetjen e duhur, këshilla të nevojshme për t'ju
+                        motivuar për të studiuar, si dhe trajnime online për secilën fushë të studimit.</p>
                 </section>
                 <section>
                     <span class="icon solid major fa-glasses accents"></span>
                     <h3>Të sfidohemi </h3>
-                    <p> Të sfidojmë vetën për të arritur gjithmonë një nivel më të madh se ai që presim është i dobishëm jo vetëm për shëndetin
-                        tonë mendor, por edhe për mirëqenien tonë personale. Ndërsa pushtojmë sfida që qëndrojnë në rrugën tonë si bllokime
-                        në rrugë, duke refuzuar të dorëzohemi, ne gjejmë besim në aftësitë tona. Besimi është një karakteristikë kaq e rëndësishme
-                        për të gjetur rrugën drejt suksesit.</p>
+                    <p> Të sfidojmë vetën për të arritur gjithmonë një nivel më të madh se ai që presim është i dobishëm jo vetëm
+                        për shëndetin tonë mendor, por edhe për mirëqenien tonë personale. Ndërsa pushtojmë sfida që qëndrojnë
+                        në rrugën tonë si bllokime në rrugë, duke refuzuar të dorëzohemi, ne gjejmë besim në aftësitë tona.
+                        Besimi është një karakteristikë kaq e rëndësishme për të gjetur rrugën drejt suksesit.</p>
                 </section>
             </div>
             <div class="features-row">
@@ -134,16 +131,17 @@
                     <span class="icon solid major fa-gamepad accent4"></span>
 
                     <h3>Të luajmë</h3>
-                    <p>Lojërat edukative janë një mjet i shkëlqyeshëm për ndërtimin e aftësive në matematikë, gjuhë, shkencë, studime shoqërore
-                        dhe shumë më tepër. Këto lojëra janë argëtuese, të mësojnë aftësi të rëndësishme në secilën fushë studimi të veçantë
-                        dhe ato janë falas. Ju jeni në vendin e duhur! Le të studiojmë dhe të argëtohemi së bashku.</p>
+                    <p>Lojërat edukative janë një mjet i shkëlqyeshëm për ndërtimin e aftësive në matematikë, gjuhë, shkencë,
+                        studime shoqërore dhe shumë më tepër. Këto lojëra janë argëtuese, të mësojnë aftësi të rëndësishme
+                        në secilën fushë studimi të veçantë dhe ato janë falas. Ju jeni në vendin e duhur! Le të studiojmë
+                        dhe të argëtohemi së bashku.</p>
                 </section>
                 <section>
                     <span class="icon solid major fa-male accent5"></span>
                     <h3>Profili im</h3>
-                    <p>Personalizoni profilin tuaj në përputhje me nevojat dhe interesin tuaj! Bëni miq të rinj, ndihmoni të tjerët, kontribuoni
-                        në dhoma diskutimi ose krijoni faqen tuaj, merrni ndihmë nga të tjerët, zgjidhni aktivitetet dhe çfarë dëshironi të
-                        njoftoheni çdo ditë në profilin tuaj, dhe shumë më tepër.</p>
+                    <p>Personalizoni profilin tuaj në përputhje me nevojat dhe interesin tuaj! Bëni miq të rinj, ndihmoni të
+                        tjerët, kontribuoni në dhoma diskutimi ose krijoni faqen tuaj, merrni ndihmë nga të tjerët, zgjidhni
+                        aktivitetet dhe çfarë dëshironi të njoftoheni çdo ditë në profilin tuaj, dhe shumë më tepër.</p>
                 </section>
             </div>
         </section>
@@ -156,8 +154,8 @@
                         <img src="images/pic02.jpg" alt="" />
                     </span>
                     <h3>Përgatitje për provim të maturës</h3>
-                    <p>Përgatitu për provim të maturës përmes platformës tonë që garanton 100% kalueshmëri në provim të maturës pas përfundimit
-                        me sukses të këtij kursi.</p>
+                    <p>Përgatitu për provim të maturës përmes platformës tonë që garanton 100% kalueshmëri në provim të maturës
+                        pas përfundimit me sukses të këtij kursi.</p>
                     <ul class="actions special">
                         <li>
                             <a href="#" class="button alt">Mëso më shumë</a>
@@ -173,8 +171,8 @@
                         <img src="images/pic03.jpg" alt="" />
                     </span>
                     <h3>Bursa për studime Bachelor</h3>
-                    <p>Zbulo dhe përzgjedh universitetet në të cilat dëshiron të studiosh. Apliko përmes nesh për të fituar bursë në universitetet
-                        tona partnere.</p>
+                    <p>Zbulo dhe përzgjedh universitetet në të cilat dëshiron të studiosh. Apliko përmes nesh për të fituar
+                        bursë në universitetet tona partnere.</p>
                     <ul class="actions special">
                         <li>
                             <a href="#" class="button alt">Mëso më shumë</a>
@@ -242,7 +240,7 @@
         </ul>
     </footer>
 
-</div>
+    </div>
 </body>
 
 </html>
