--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <p>Platforma e vetme në vend për nxënësit e shkollave të mesme</p>
             <ul class="actions special">
                 <li>
-                    <a href="#" class="button primary">Nxënësit</a>
+                    <a href="kyqu.html" class="button primary">Kyqu</a>
                 </li>
             </ul>
         </section>
