--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
+
 </head>
 
 <body class="landing is-preload">
@@ -19,61 +20,21 @@
             <nav id="nav">
                 <ul>
                     <li>
-                        <a href="index.html">BALLINA</a>
+                        <a href="index.html" id="button">Ballina</a>
                     </li>
                     <li>
-                        <a href="#" class="icon solid fa-angle-down">MENU</a>
-                        <ul>
-                            <li>
-                                <a href="generic.html">Rregullat</a>
-                            </li>
-                            <li>
-                                <a href="contact.html">Kontakti</a>
-                            </li>
-                            <li>
-                                <a href="elements.html">Mësimdhënësit</a>
-                            </li>
-                            <li>
-                                <a href="#">Dhoma Diskutimi</a>
-                                <ul>
-                                    <li>
-                                        <a href="#">Gjuhë Shqipe</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Matematikë</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Shkenca Kompjuterike</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Art</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Gjuhë Angleze</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Fizikë</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Kimi</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Biologji</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Histori</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">TIK</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Gjeografi</a>
-                                    </li>
-
-                                </ul>
-                            </li>
-                        </ul>
+                        <a href="index.html">Rreth Nesh</a>
                     </li>
+                    <li>
+                        <a href="index.html">Rregullat</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Grupet</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Kontakt</a>
+                    </li>
+
                     <li>
                         <a href="regjistrohu.html" class="button">REGJISTROHU</a>
                     </li>
@@ -241,6 +202,14 @@
     </footer>
 
     </div>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.dropotron.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
