--- a/regjistrohu.html
+++ b/regjistrohu.html
@@ -38,7 +38,7 @@
 
             <div class="caption">Zgjedhni Shkollen tuaj</div>
             <select name="select" id="dept" class="department" onblur="run()">
-                <option value="">Zgjedhni Shkollen tuaj</option>
+                <option value="">Zgjedhni drejtimin:</option>
                 <option value="GJ">Gjimnaz</option>
                 <option value="M">Mjeksi</option>
                 <option value="SHP">Shkolle Profesionale</option>
