--- a/index.html
+++ b/index.html
@@ -14,72 +14,33 @@
         <!-- Header -->
         <header id="header" class="alt">
             <h1>
-                <a href="index.html">High Schoolar's Hub</a>
+            <a href="index.html">High Schoolar's Hub</a>
             </h1>
             <nav id="nav">
-                <ul>
-                    <li>
-                        <a href="index.html">BALLINA</a>
-                    </li>
-                    <li>
-                        <a href="#" class="icon solid fa-angle-down">MENU</a>
-                        <ul>
-                            <li>
-                                <a href="generic.html">Rregullat</a>
-                            </li>
-                            <li>
-                                <a href="contact.html">Kontakti</a>
-                            </li>
-                            <li>
-                                <a href="elements.html">Mësimdhënësit</a>
-                            </li>
-                            <li>
-                                <a href="#">Dhoma Diskutimi</a>
-                                <ul>
-                                    <li>
-                                        <a href="#">Gjuhë Shqipe</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Matematikë</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Shkenca Kompjuterike</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Art</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Gjuhë Angleze</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Fizikë</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Kimi</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Biologji</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Histori</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">TIK</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Gjeografi</a>
-                                    </li>
-
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="regjistrohu.html" class="button">REGJISTROHU</a>
-                    </li>
-                </ul>
+            <ul>
+            <li>
+            <a href="index.html" id="button">Ballina</a>
+            </li>
+            <li>
+            <a href="index.html">Rreth Nesh</a>
+            </li>
+            <li>
+            <a href="index.html">Rregullat</a>
+            </li>
+            <li>
+            <a href="index.html">Grupet</a>
+            </li>
+            <li>
+            <a href="kontakt.html">Kontakt</a>
+            </li>
+            
+            <li>
+            <a href="regjistrohu.html" class="button">REGJISTROHU</a>
+            </li>
+            </ul>
             </nav>
-        </header>
+            </header>
+            
 
         <!-- Banner -->
         <section id="banner">
@@ -238,9 +199,20 @@
                 </a>
             </li>
         </ul>
+  
     </footer>
 
     </div>
+          	<!-- Scripts -->
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/jquery.dropotron.min.js"></script>
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/kyqu.js"></script>
+	<script src="assets/js/main.js"></script>
+    <script src="assets/js/regjistrohu.js"></script>
+    <script src="assets/js/util.js"></script>
 </body>
 
 </html>
