--- a/index.html
+++ b/index.html
@@ -15,33 +15,33 @@
         <!-- Header -->
         <header id="header" class="alt">
             <h1>
-            <a href="index.html">High Schoolar's Hub</a>
+                <a href="index.html">High Schoolar's Hub</a>
             </h1>
             <nav id="nav">
-            <ul>
-            <li>
-            <a href="index.html" id="button">Ballina</a>
-            </li>
-            <li>
-            <a href="index.html">Rreth Nesh</a>
-            </li>
-            <li>
-            <a href="index.html">Rregullat</a>
-            </li>
-            <li>
-            <a href="index.html">Grupet</a>
-            </li>
-            <li>
-            <a href="kontakt.html">Kontakt</a>
-            </li>
-            
-            <li>
-            <a href="regjistrohu.html" class="button">REGJISTROHU</a>
-            </li>
-            </ul>
+                <ul>
+                    <li>
+                        <a href="index.html" id="button">Ballina</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Rreth Nesh</a>
+                    </li>
+                    <li>
+                        <a href="rregullat.html">Rregullat</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Grupet</a>
+                    </li>
+                    <li>
+                        <a href="kontakt.html">Kontakt</a>
+                    </li>
+
+                    <li>
+                        <a href="regjistrohu.html" class="button">REGJISTROHU</a>
+                    </li>
+                </ul>
             </nav>
-            </header>
-            
+        </header>
+
 
         <!-- Banner -->
         <section id="banner">
@@ -150,16 +150,16 @@
     <!-- CTA -->
     <section id="cta">
 
-        <h2>Nxënësit e rinjë</h2>
-        <p>Ende nuk je pjesë e High Scholar's Hub? Regjistrohu dhe bashkohuni me mijëra nxënës të tjerë.</p>
+        <h2>Sign up for beta access</h2>
+        <p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
 
         <form>
             <div class="row gtr-50 gtr-uniform">
                 <div class="col-8 col-12-mobilep">
-                    <input type="email" name="email" id="email" placeholder="E-mail Adresa juaj" />
+                    <input type="email" name="email" id="email" placeholder="Email Address" />
                 </div>
                 <div class="col-4 col-12-mobilep">
-                    <input type="submit" value="Regjistrohu" class="fit" />
+                    <input type="submit" value="Sign Up" class="fit" />
                 </div>
             </div>
         </form>
@@ -185,12 +185,12 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="icon brands fa-github">
+                <a href="#" class="icon fa-github">
                     <span class="label">Github</span>
                 </a>
             </li>
             <li>
-                <a href="#" class="icon brands fa-dribbble">
+                <a href="#" class="icon fa-dribbble">
                     <span class="label">Dribbble</span>
                 </a>
             </li>
@@ -200,18 +200,17 @@
                 </a>
             </li>
         </ul>
-  
     </footer>
 
     </div>
-          	<!-- Scripts -->
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/jquery.dropotron.min.js"></script>
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/kyqu.js"></script>
-	<script src="assets/js/main.js"></script>
+    <!-- Scripts -->
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/jquery.dropotron.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/kyqu.js"></script>
+    <script src="assets/js/main.js"></script>
     <script src="assets/js/regjistrohu.js"></script>
     <script src="assets/js/util.js"></script>
 </body>
