--- a/rregullat.html
+++ b/rregullat.html
@@ -13,35 +13,36 @@
     <div id="page-wrapper">
 
         <!-- Header -->
-        <header id="header" class="alt">
-            <h1>
-                <a href="index.html">High Schoolar's Hub</a>
-            </h1>
-            <nav id="nav">
-                <ul>
-                    <li>
-                        <a href="index.html" id="button">Ballina</a>
-                    </li>
-                    <li>
-                        <a href="index.html">Rreth Nesh</a>
-                    </li>
-                    <li>
-                        <a href="rregullat.html">Rregullat</a>
-                    </li>
-                    <li>
-                        <a href="index.html">Grupet</a>
-                    </li>
-                    <li>
-                        <a href="kontakt.html">Kontakt</a>
-                    </li>
+        <header id="header">
+            <header id="header" class="alt">
+                <h1>
+                    <a href="index.html">High Schoolar's Hub</a>
+                </h1>
+                <nav id="nav">
+                    <ul>
+                        <li>
+                            <a href="index.html" id="button">Ballina</a>
+                        </li>
+                        <li>
+                            <a href="index.html">Rreth Nesh</a>
+                        </li>
+                        <li>
+                            <a href="rregullat.html">Rregullat</a>
+                        </li>
+                        <li>
+                            <a href="index.html">Grupet</a>
+                        </li>
+                        <li>
+                            <a href="kontakt.html">Kontakt</a>
+                        </li>
 
-                    <li>
-                        <a href="regjistrohu.html" class="button">REGJISTROHU</a>
-                    </li>
-                </ul>
-            </nav>
+                        <li>
+                            <a href="regjistrohu.html" class="button">REGJISTROHU</a>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
         </header>
-
         <!-- Main -->
         <section id="main" class="container">
             <header>
