--- a/kontakt.html
+++ b/kontakt.html
@@ -43,27 +43,27 @@
 <!-- Main -->
 <section id="main" class="container medium">
 <header>
-<h2>Contact Us</h2>
-<p>Tell us what you think about our little operation.</p>
+<h2>Na kontaktoni</h2>
+<p>Na tregoni se qfarë mendoni per web faqen tonë</p>
 </header>
 <div class="box">
 <form method="post" action="#">
 <div class="row gtr-50 gtr-uniform">
 <div class="col-6 col-12-mobilep">
-<input type="text" name="name" id="name" value="" placeholder="Name" />
+<input type="text" name="name" id="name" value="" placeholder="Emri" />
 </div>
 <div class="col-6 col-12-mobilep">
 <input type="email" name="email" id="email" value="" placeholder="Email" />
 </div>
 <div class="col-12">
-<input type="text" name="subject" id="subject" value="" placeholder="Subject" />
+<input type="text" name="subject" id="subject" value="" placeholder="Tema" />
 </div>
 <div class="col-12">
-<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
+<textarea name="message" id="message" placeholder="Shkruani mesazhin tuaj këtu..." rows="6"></textarea>
 </div>
 <div class="col-12">
 <ul class="actions special">
-<li><input type="submit" value="Send Message" /></li>
+<li><input type="submit" value="Dergo mesazhin" /></li>
 </ul>
 </div>
 </div>
