--- a/kyqu.html
+++ b/kyqu.html
@@ -31,7 +31,10 @@
                          <input type="radio" name="gender" class="hobby" value="female">
                          <span1 style="position: relative;">Femër</span1>
                          <br>
-                    <input type="text" class="input-field" placeholder="Enter Password" required>
+                        <input type="text" class="input-field" placeholder="Shkruaj fjalekalimin" required>   
+                        <br>
+                        <input type="text" class="input-field" placeholder="Konfirmo fjalekalimin" required>   
+                        <br>
                     <input type="checkbox" class="check-box"> <span> I agree to terms &  conditions</span>
                     <button type="submit" class="submit-btn">Regjistrohu</button>
                 </form>
