--- a/rrethnesh.html
+++ b/rrethnesh.html
@@ -1,7 +1,9 @@
 <!DOCTYPE HTML>
+
 <html>
 
 <head>
+    <title>Rreth Nesh</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -37,37 +39,37 @@
                 </nav>
             </header>
         </header>
-
         <!-- Main -->
-        <section id="main" class="container medium">
+        <section id="main" class="container">
             <header>
-                <h2>Na kontaktoni</h2>
-                <p>Na tregoni se qfarë mendoni per web faqen tonë</p>
+                <h2>Rreth Nesh</h2>
+                <p>Misioni dhe vlerat e HighscholarsHub</p>
             </header>
             <div class="box">
-                <form method="post" action="#">
-                    <div class="row gtr-50 gtr-uniform">
-                        <div class="col-6 col-12-mobilep">
-                            <input type="text" name="name" id="name" value="" placeholder="Emri" />
-                        </div>
-                        <div class="col-6 col-12-mobilep">
-                            <input type="email" name="email" id="email" value="" placeholder="Email" />
-                        </div>
-                        <div class="col-12">
-                            <input type="text" name="subject" id="subject" value="" placeholder="Tema" />
-                        </div>
-                        <div class="col-12">
-                            <textarea name="message" id="message" placeholder="Shkruani mesazhin tuaj këtu..." rows="6"></textarea>
-                        </div>
-                        <div class="col-12">
-                            <ul class="actions special">
-                                <li>
-                                    <input type="submit" value="Dergo mesazhin" />
-                                </li>
-                            </ul>
-                        </div>
+                <span class="image featured">
+                    <img src="images/pic01.jpg" alt="" />
+                </span>
+                <h3>Misioni</h3>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+                    et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+                    Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor
+                    sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
+                    aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
+                    kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
+                    sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed
+                    diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
+                    sea takimata sanctus est Lorem ipsum dolor sit amet .
+                </p>
+                <div class="row">
+                    <div class="row-6 row-12-mobilep">
+                        <h3>Vizioni</h3>
+                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                            labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+                            dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
+                            sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                            invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. </p>
                     </div>
-                </form>
+                </div>
             </div>
         </section>
 
@@ -104,7 +106,7 @@
                         <span class="label">Google+</span>
                     </a>
                 </li>
-            </ul>
+            </ul>>
         </footer>
 
     </div>
