--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a href="index.html" id="button">Ballina</a>
                     </li>
                     <li>
-                        <a href="index.html">Rreth Nesh</a>
+                        <a href="rrethnesh.html">Rreth Nesh</a>
                     </li>
                     <li>
                         <a href="rregullat.html">Rregullat</a>
@@ -33,10 +33,6 @@
                     </li>
                     <li>
                         <a href="kontakt.html">Kontakt</a>
-                    </li>
-
-                    <li>
-                        <a href="regjistrohu.html" class="button">REGJISTROHU</a>
                     </li>
                 </ul>
             </nav>
